view transitions are cool and im gonna deploy

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -6,6 +6,7 @@ const className = Astro.props.className;
 ---
 
 <div
+  transition:name="avatar"
   style={{
     backgroundImage: `url(${img})`,
   }}
