--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Avatar from "../components/Avatar.astro";
 import Badge from "../components/Badge.astro";
 import Link from "../components/Link.astro";
+import Layout from "../layouts/layout.astro";
 
 // icons
 import Github from "../../public/images/icons/github.svg";
@@ -16,137 +17,136 @@ import TS from "../../public/images/icons/typescript.svg";
 import Movie from "../../public/images/icons/film.svg";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Jed Borseth | Developer</title>
-  </head>
-  <body>
-    <main class="min-h-screen bg-bg md:flex">
-      <section class="text-lg h-full md:w-1/2 md:sticky top-0 left-0">
-        <div class="flex flex-col p-20 items-center md:items-baseline">
-          <Avatar
-            img="https://avatars.githubusercontent.com/u/95988576?v=4"
-            className="m-2"
-          />
-          <h1 class="text-4xl font-medium">Jed Borseth</h1>
-          <p>
-            A Passionate full stack web developer with experience in
-            serverless...
-          </p>
-          <div class="flex gap-1">
-            <Badge text="Developer" />
-            <Badge text="Snuggler" />
-          </div>
-        </div>
-      </section>
-      <section
-        class="grid w-full grid-cols-2 gap-10 md:grid-cols-3 xl:w-1/2 xl:pb-16 sm:grid-cols-1 sm:gap-7 p-4"
-      >
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="LinkedIn"
-          href="https://github.com/JedBorseth"
-          icon={LinkedIn.src}
-        />
-        <Link
-          title="Twitter"
-          href="https://github.com/JedBorseth"
-          icon={Twitter.src}
-        />
-        <Link
-          title="Resume"
-          href="https://github.com/JedBorseth"
-          icon={CV.src}
-        />
-        <Link
-          title="Email"
-          href="https://github.com/JedBorseth"
-          icon={Gmail.src}
-        />
-        <Link
-          title="Movie DB"
-          repo="https://github.com/JedBorseth/movie-database"
-          href="https://github.com/JedBorseth"
-          icon={Movie.src}
-        />
-        <Link
-          title="Uno Game"
-          repo="https://github.com/joshborseth/uno-game"
-          href="https://github.com/JedBorseth"
-          icon={NextJS.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-        <Link
-          title="Github"
-          href="https://github.com/JedBorseth"
-          icon={Github.src}
-        />
-      </section>
-    </main>
-    <footer class="bg-bg p-5 text-center">
-      <span>&copy; Copyright Jed Borseth {new Date().getFullYear()}</span>
-    </footer>
-  </body>
-</html>
+<Layout title="Jed Borseth | Developer" canonicalURL="Home">
+  <section class="text-lg h-full md:w-1/2 md:sticky top-0 left-0">
+    <div class="flex flex-col p-20 items-center md:items-baseline">
+      <Avatar
+        img="https://avatars.githubusercontent.com/u/95988576?v=4"
+        className="m-2"
+      />
+      <h1 class="text-4xl font-medium">Jed Borseth</h1>
+      <p>
+        A Passionate full stack web developer with experience in serverless...
+      </p>
+      <div class="flex gap-1">
+        <Badge text="Developer" />
+        <Badge text="Snuggler" />
+      </div>
+    </div>
+  </section>
+  <section
+    class="grid w-full grid-cols-2 gap-10 md:grid-cols-3 xl:w-1/2 xl:pb-16 sm:grid-cols-1 sm:gap-7 p-4"
+  >
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      openNew
+      icon={Github.src}
+    />
+    <Link
+      title="LinkedIn"
+      href="https://github.com/JedBorseth"
+      openNew
+      icon={LinkedIn.src}
+    />
+    <Link
+      title="Twitter"
+      href="https://github.com/JedBorseth"
+      openNew
+      icon={Twitter.src}
+    />
+    <Link
+      title="Resume"
+      href="https://github.com/JedBorseth"
+      openNew
+      icon={CV.src}
+    />
+    <Link
+      title="Email"
+      href="https://github.com/JedBorseth"
+      openNew
+      icon={Gmail.src}
+    />
+    <Link
+      title="Movie DB"
+      repo="https://github.com/JedBorseth/movie-database"
+      href="./projects/movie-db"
+      projectName="movie-db"
+      icon={Movie.src}
+    />
+    <Link
+      title="Uno Game"
+      repo="https://github.com/joshborseth/uno-game"
+      href="./projects/uno"
+      projectName="uno"
+      icon={NextJS.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+    <Link
+      title="Github"
+      href="https://github.com/JedBorseth"
+      icon={Github.src}
+      lazy
+    />
+  </section>
+</Layout>
