fix cannonicalURL for projects page

--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -15,7 +15,7 @@ const { project } = Astro.params;
 
 <Layout
   title={"Jed Borseth | " + project.charAt(0).toUpperCase() + project.slice(1)}
-  canonicalURL={`Project | ${project}`}
+  canonicalURL={`https://jedborseth.com/projects/${project}`}
 >
   <div class="">
     <div class="scale-50">
