Removed silliness from index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ if (process.env.NODE_ENV === "production") {
       </p>
       <div class="flex gap-1">
         <Badge text="Developer" />
-        <Badge text="Snuggler" />
+        <Badge text="Other Title" />
       </div>
     </div>
   </section>
