--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -61,6 +61,7 @@ const { description, author, socialImageURL } = {
     </main>
     <footer class="bg-bg p-5 text-center">
       <span>&copy; Copyright Jed Borseth {new Date().getFullYear()}</span>
+      <div class="text-red-500">site is still under construction</div>
     </footer>
   </body>
 </html>
