--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -9,13 +9,22 @@ type PropTypes = {
   openNew?: boolean;
   lazy?: boolean;
   projectName?: string;
+  subtitle?: string;
 };
-const { className, title, href, icon, openNew, lazy, projectName }: PropTypes =
-  Astro.props;
+const {
+  className,
+  title,
+  href,
+  icon,
+  openNew,
+  lazy,
+  projectName,
+  subtitle,
+}: PropTypes = Astro.props;
 ---
 
 <a
-  class="rounded-base border-2 border-black bg-main p-5 shadow-base transition-all hover:translate-x-boxShadowX hover:translate-y-boxShadowY hover:shadow-none max-h-44"
+  class="rounded-base border-2 border-black bg-main sm:p-5 p-2 shadow-base transition-all hover:translate-x-boxShadowX hover:translate-y-boxShadowY hover:shadow-none max-h-44"
   target={openNew ? "_blank" : "_self"}
   href={href}
   transition:name={projectName}
@@ -27,5 +36,7 @@ const { className, title, href, icon, openNew, lazy, projectName }: PropTypes =
     loading={lazy ? "lazy" : "eager"}
   /><p class="mt-3 text-lg font-heading sm:text-xl">
     {title}
-  </p><p class="mt-1 text-sm font-base sm:text-base">@jedborseth</p></a
+  </p><p class="mt-1 text-[0.5rem] font-base sm:text-base md:text-sm">
+    {subtitle ?? "@jedborseth"}
+  </p></a
 >
