started resume route

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,13 +25,8 @@ import Movie from "../../public/images/icons/film.svg";
         className="m-2"
       />
       <h1 class="text-4xl font-medium">Jed Borseth</h1>
-      <p>
-        Innovative web developer with a passion for crafting seamless,
-        user-friendly websites. Expert in modern web technologies and design, I
-        transform ideas into engaging digital experiences that drive results and
-        exceed expectations.
-      </p>
-      <div class="flex gap-1 flex-wrap md:p-5 mt-2">
+      <p>Experienced Full-Stack Web Developer</p>
+      <div class="md:flex gap-1 flex-wrap md:p-5 mt-2 hidden">
         <Badge text="Typescript" />
         <Badge text="NextJS" />
         <Badge text="React" />
@@ -66,12 +61,7 @@ import Movie from "../../public/images/icons/film.svg";
       openNew
       icon={Twitter.src}
     />
-    <Link
-      title="Resume"
-      href="https://github.com/JedBorseth"
-      openNew
-      icon={CV.src}
-    />
+    <Link title="Resume" href="/resume" icon={CV.src} projectName="resume" />
     <Link
       title="Email"
       subtitle="jedborseth@gmail.com"
@@ -95,12 +85,12 @@ import Movie from "../../public/images/icons/film.svg";
       icon={NextJS.src}
     />
     <Link
-      title="Github"
+      title="Github1"
       href="https://github.com/JedBorseth"
       icon={Github.src}
     />
     <Link
-      title="Github"
+      title="Github2"
       href="https://github.com/JedBorseth"
       icon={Github.src}
     />
@@ -116,43 +106,43 @@ import Movie from "../../public/images/icons/film.svg";
       icon={Github.src}
     />
     <Link
-      title="Github"
+      title="Github3"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github4"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github5"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github6"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github7"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github8"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github"
+      title="Github9"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
