--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -34,6 +34,7 @@ const {
     src={icon}
     alt={`Icon`}
     loading={lazy ? "lazy" : "eager"}
+    transition:name={projectName === "resume" ? "resume-icon" : undefined}
   /><p class="mt-3 text-lg font-heading sm:text-xl">
     {title}
   </p><p class="mt-1 text-[0.5rem] font-base sm:text-base md:text-sm">
