--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -56,7 +56,7 @@ const { description, author, socialImageURL } = {
     <ViewTransitions />
   </head>
   <body>
-    <main class="min-h-screen bg-bg md:flex">
+    <main class="min-h-screen bg-bg flex flex-col md:flex-row">
       <slot />
     </main>
     <footer class="bg-bg p-5 text-center">
