will vercel get mad

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,9 +106,10 @@ import Movie from "../../public/images/icons/film.svg";
       icon={Github.src}
     />
     <Link
-      title="Github3"
-      href="https://github.com/JedBorseth"
+      title="Interstellar"
+      href="./why"
       icon={Github.src}
+      subtitle="The Whole Movie"
       lazy
     />
     <Link
