--- a/src/pages/why.astro
+++ b/src/pages/why.astro
@@ -6,4 +6,9 @@
   not sure why i did this. Carfull of ads there are many ads
 </div>
 
-<embed src="https://vidsrc.to/embed/movie/157336" class="w-full min-h-screen" />
+<iframe
+  src="https://vidsrc.to/embed/movie/157336"
+  title="why"
+  class="w-full min-h-screen"
+  allowfullscreen="true"
+  allow="autoplay; fullscreen"></iframe>
