--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,10 @@ import Gmail from "../../public/images/icons/gmail.svg";
 import NextJS from "../../public/images/icons/nextdotjs.svg";
 import OpenAi from "../../public/images/icons/openai.svg";
 import CV from "../../public/images/icons/readdotcv.svg";
-import Three from "../../public/images/icons/threejs.svg";
+import Three from "../../public/images/icons/threedotjs.svg";
 import TS from "../../public/images/icons/typescript.svg";
 import Movie from "../../public/images/icons/film.svg";
+import Box from "../../public/images/icons/box.svg";
 ---
 
 <Layout title="Jed Borseth | Developer" canonicalURL="Home">
@@ -25,7 +26,7 @@ import Movie from "../../public/images/icons/film.svg";
         className="m-2"
       />
       <h1 class="text-4xl font-medium">Jed Borseth</h1>
-      <p>Experienced Full-Stack Web Developer</p>
+      <p>Full-Stack Software Engineer / Web Developer</p>
       <div class="md:flex gap-1 flex-wrap md:p-5 mt-2 hidden">
         <Badge text="Typescript" />
         <Badge text="NextJS" />
@@ -85,12 +86,12 @@ import Movie from "../../public/images/icons/film.svg";
       icon={NextJS.src}
     />
     <Link
-      title="Github1"
-      href="https://github.com/JedBorseth"
-      icon={Github.src}
+      title="rlpackaging.ca"
+      href="./projects/rl-packaging"
+      icon={Box.src}
     />
     <Link
-      title="Github2"
+      title="Spotify Clone"
       href="https://github.com/JedBorseth"
       icon={Github.src}
     />
@@ -113,37 +114,37 @@ import Movie from "../../public/images/icons/film.svg";
       lazy
     />
     <Link
-      title="Github4"
+      title="ThreeJS Gallary"
+      href="https://github.com/JedBorseth"
+      icon={Three.src}
+      lazy
+    />
+    <Link
+      title="Link1"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github5"
+      title="Link2"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github6"
+      title="Link3"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github7"
+      title="Link4"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
     />
     <Link
-      title="Github8"
-      href="https://github.com/JedBorseth"
-      icon={Github.src}
-      lazy
-    />
-    <Link
-      title="Github9"
+      title="Link5"
       href="https://github.com/JedBorseth"
       icon={Github.src}
       lazy
