--- a/src/pages/projects/[project].astro
+++ b/src/pages/projects/[project].astro
@@ -7,6 +7,7 @@ export function getStaticPaths() {
     { params: { project: "uno" } },
     { params: { project: "movie-db" } },
     { params: { project: "threejs" } },
+    { params: { project: "rl-packaging" } },
   ];
 }
 
