started project page markup and styles

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -11,7 +11,7 @@ const className = Astro.props.className;
     backgroundImage: `url(${img})`,
   }}
   class={cn(
-    "h-56 w-56 rounded-full border-2 border-black bg-cover bg-center",
+    "h-56 w-56 rounded-full border-2 border-black bg-cover bg-center group-hover:hidden",
     className
   )}
   ,
