--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import Box from "../../public/images/icons/box.svg";
     </div>
   </section>
   <section
-    class="grid w-full grid-cols-2 gap-10 md:grid-cols-3 xl:w-1/2 xl:pb-16 sm:grid-cols-1 sm:gap-7 p-4"
+    class="grid w-full grid-cols-1 sm:grid-cols-2 gap-10 md:grid-cols-3 xl:w-1/2 xl:pb-16 sm:gap-7 p-4"
   >
     <Link
       title="Github"
@@ -86,7 +86,7 @@ import Box from "../../public/images/icons/box.svg";
       icon={NextJS.src}
     />
     <Link
-      title="rlpackaging.ca"
+      title="R&L Packaging"
       href="./projects/rl-packaging"
       icon={Box.src}
     />
@@ -107,12 +107,12 @@ import Box from "../../public/images/icons/box.svg";
       icon={Github.src}
     />
     <Link
-      title="Interstellar"
-      href="./why"
-      icon={Github.src}
-      subtitle="The Whole Movie"
-      lazy
-    />
+    title="Link0"
+    href="https://github.com/JedBorseth"
+    icon={Github.src}
+    lazy
+  />
+    
     <Link
       title="ThreeJS Gallary"
       href="https://github.com/JedBorseth"
