prefers reduced motion support

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -60,11 +60,11 @@ const { description, author, socialImageURL } = {
       <slot />
     </main>
     <footer
-      class="bg-bg bg-opacity-80 p-2 text-center flex flex-col justify-center"
+      class="bg-bg bg-opacity-60 p-2 text-center flex flex-col justify-center"
     >
       <div>Jed Borseth &copy; {new Date().getFullYear()}</div>
       <div class="text-xs">
-        Check out <a href="https://astro.build/">Astro 🚀</a>
+        Check out <a href="https://astro.build/" target="_blank">Astro 🚀</a>
       </div>
     </footer>
   </body>
