back btn for resume & colors for badge

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,12 +97,14 @@ import Box from "../../public/images/icons/box.svg";
     />
     <Link
       title="Site using Stripe"
+      subtitle="cookies.jedborseth.com"
       href="https://cookies.jedborseth.com/"
       icon={Github.src}
     />
 
     <Link
       title="ThreeJS Gallary"
+      subtitle="gallery.jedborseth.com"
       href="https://gallery.jedborseth.com/"
       icon={Three.src}
     />
